# Switcheroo

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: converter.cpp  converter.hpp  main_window.cpp  main_window.hpp  menu.cpp  menu.hpp  switcheroo.cpp  validator.cpp  validator.hpp
